[package]
name = "RTS_Lab-8"
version = "0.1.0"
authors = ["EvanMillikan <evanmillikan@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduled-thread-pool = "0.2.5"
crossbeam-channel = "0.5.0"
threadpool = "1.8.1"